--- a/ShareTripSDK/Classes/STCoreKit/Views/Info/InfoUploadCell.xib
+++ b/ShareTripSDK/Classes/STCoreKit/Views/Info/InfoUploadCell.xib
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="128" id="KGk-i7-Jjw" customClass="InfoUploadCell" customModule="ShareTrip" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="128" id="KGk-i7-Jjw" customClass="InfoUploadCell" customModule="ShareTripSDK" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="381" height="128"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -20,7 +20,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Passport Copy(max 2MB)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y7b-e0-J0t">
                         <rect key="frame" x="16" y="16" width="133.5" height="39"/>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <color key="textColor" red="0.55699998140335083" green="0.55699998140335083" blue="0.57599997520446777" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vBx-xy-lPL" userLabel="PassportUpload">
@@ -47,9 +47,9 @@
                         <color key="trackTintColor" red="0.84313725490000002" green="0.89019607840000003" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </progressView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Visa Copy(max 2MB)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vve-0l-36X">
-                        <rect key="frame" x="196" y="41" width="109.5" height="14"/>
+                        <rect key="frame" x="196" y="16" width="109.5" height="39"/>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <color key="textColor" red="0.55699998140335083" green="0.55699998140335083" blue="0.57599997520446777" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9rY-qJ-CoM" userLabel="VisaUpload">
@@ -76,6 +76,7 @@
                         <color key="trackTintColor" red="0.84313725490000002" green="0.89019607840000003" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </progressView>
                 </subviews>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="vBx-xy-lPL" firstAttribute="leading" secondItem="Y7b-e0-J0t" secondAttribute="leading" id="1ZQ-oR-6OG"/>
                     <constraint firstItem="LzU-c0-tAx" firstAttribute="bottom" secondItem="vBx-xy-lPL" secondAttribute="bottom" id="1fN-uW-kGb"/>
@@ -86,6 +87,7 @@
                     <constraint firstAttribute="bottom" secondItem="vBx-xy-lPL" secondAttribute="bottom" constant="1" id="WTd-0C-6om"/>
                     <constraint firstItem="9rY-qJ-CoM" firstAttribute="top" secondItem="Vve-0l-36X" secondAttribute="bottom" constant="8" id="b5U-K4-iZb"/>
                     <constraint firstItem="9rY-qJ-CoM" firstAttribute="leading" secondItem="vBx-xy-lPL" secondAttribute="trailing" constant="11" id="b6W-g9-b72"/>
+                    <constraint firstItem="Vve-0l-36X" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="de0-xB-woy"/>
                     <constraint firstItem="LzU-c0-tAx" firstAttribute="leading" secondItem="vBx-xy-lPL" secondAttribute="leading" id="gL1-KU-THb"/>
                     <constraint firstItem="9rY-qJ-CoM" firstAttribute="leading" secondItem="OxH-4X-zAO" secondAttribute="leading" id="hCM-tj-xHR"/>
                     <constraint firstItem="Vve-0l-36X" firstAttribute="leading" secondItem="9rY-qJ-CoM" secondAttribute="leading" id="hwj-Ni-jvg"/>
