--- a/ShareTripSDK/Classes/STCoreKit/Views/PaymentGateways/PaymentGatewaysView.xib
+++ b/ShareTripSDK/Classes/STCoreKit/Views/PaymentGateways/PaymentGatewaysView.xib
@@ -5,21 +5,20 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="FfW-WB-hm9" customClass="PaymentGatewaysView" customModule="ShareTripSDK" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="358" height="352"/>
+            <rect key="frame" x="0.0" y="0.0" width="358" height="385"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ymd-Av-2yt" userLabel="Header">
-                    <rect key="frame" x="0.0" y="0.0" width="358" height="51"/>
+                    <rect key="frame" x="0.0" y="0.0" width="358" height="84"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="payment-mono" translatesAutoresizingMaskIntoConstraints="NO" id="3LV-Xe-y4F">
-                            <rect key="frame" x="8" y="7.6666666666666679" width="36" height="36"/>
+                            <rect key="frame" x="8" y="24" width="36" height="36"/>
                             <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="3LV-Xe-y4F" secondAttribute="height" id="Y9m-gq-2ir"/>
@@ -27,24 +26,24 @@
                             </constraints>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="vVn-ha-aq8">
-                            <rect key="frame" x="56" y="12" width="294" height="29"/>
+                            <rect key="frame" x="56" y="12" width="294" height="62"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Select Your Preferred Bank" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MUh-c0-4Uh">
-                                    <rect key="frame" x="0.0" y="0.0" width="294" height="19.333333333333332"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="294" height="46"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose your Payment Method" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BN5-Fw-C0L">
-                                    <rect key="frame" x="0.0" y="23.333333333333336" width="294" height="5.6666666666666679"/>
+                                    <rect key="frame" x="0.0" y="50" width="294" height="12"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
                         </stackView>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="3LV-Xe-y4F" firstAttribute="centerY" secondItem="Ymd-Av-2yt" secondAttribute="centerY" id="JJT-zc-yY3"/>
                         <constraint firstAttribute="bottom" secondItem="vVn-ha-aq8" secondAttribute="bottom" constant="10" id="MIp-ui-PWe"/>
@@ -55,7 +54,7 @@
                     </constraints>
                 </view>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="m2s-cu-49x">
-                    <rect key="frame" x="8" y="67" width="342" height="285"/>
+                    <rect key="frame" x="8" y="100" width="342" height="285"/>
                     <subviews>
                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="xcm-nJ-fx3">
                             <rect key="frame" x="0.0" y="0.0" width="342" height="150"/>
@@ -73,7 +72,7 @@
                         </collectionView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C05-CU-9o5">
                             <rect key="frame" x="0.0" y="150" width="342" height="35"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="35" id="3LV-RO-iUO"/>
                             </constraints>
@@ -84,7 +83,7 @@
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Card Prefix" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UWa-Fg-brO">
                                     <rect key="frame" x="56" y="6" width="282" height="22"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                    <color key="textColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="card-mono" translatesAutoresizingMaskIntoConstraints="NO" id="ZD5-W8-FjZ">
@@ -95,12 +94,14 @@
                                         <constraint firstAttribute="width" constant="24" id="d1U-JM-dtZ"/>
                                     </constraints>
                                 </imageView>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Select Card Prefix" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YHx-q0-2CV" customClass="NoSelectTextField" customModule="ShareTripSDK" customModuleProvider="target">
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Select Card Prefix" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YHx-q0-2CV" customClass="NoSelectTextField" customModule="ShareTripSDK" customModuleProvider="target">
                                     <rect key="frame" x="56" y="38" width="282" height="40"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="40" id="sCf-ZA-iAi"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0K4-KG-5Am" userLabel="DividerView">
@@ -111,7 +112,7 @@
                                     </constraints>
                                 </view>
                             </subviews>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="bottom" secondItem="0K4-KG-5Am" secondAttribute="bottom" constant="16" id="1XP-yR-YBp"/>
                                 <constraint firstItem="0K4-KG-5Am" firstAttribute="top" secondItem="YHx-q0-2CV" secondAttribute="bottom" constant="4" id="Kay-V5-yXR"/>
@@ -129,10 +130,11 @@
                             </constraints>
                         </view>
                     </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="sw9-yL-hjo"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="Ymd-Av-2yt" firstAttribute="leading" secondItem="FfW-WB-hm9" secondAttribute="leading" id="Ert-iM-iY7"/>
                 <constraint firstItem="Ymd-Av-2yt" firstAttribute="top" secondItem="FfW-WB-hm9" secondAttribute="top" id="Ow6-Fh-cJF"/>
@@ -158,14 +160,11 @@
                 <outlet property="paymentGatewayCollectionView" destination="xcm-nJ-fx3" id="1Ma-VF-0KP"/>
                 <outlet property="paymentImageView" destination="3LV-Xe-y4F" id="r1p-IC-nnm"/>
             </connections>
-            <point key="canvasLocation" x="-1649" y="60"/>
+            <point key="canvasLocation" x="-1649.2753623188407" y="72.96195652173914"/>
         </view>
     </objects>
     <resources>
         <image name="card-mono" width="24" height="24"/>
         <image name="payment-mono" width="36" height="36"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
